// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form checkbox component should render with value false 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="Name2"
    id="Name2-label"
  >
    Label2-not-ticked
  </label>
  <input
    id="Name2"
    name="Name2"
    type="checkbox"
  />
</div>
`;

exports[`Form checkbox component should render with value true 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="Name1"
    id="Name1-label"
  >
    Label1-ticked
  </label>
  <input
    checked=""
    id="Name1"
    name="Name1"
    type="checkbox"
  />
</div>
`;
